@startuml
skinparam classAttributeIconSize 0

' Interfaces
interface IVotavel {
    +receberVoto(aindaAcontecendo: boolean)
    +calcularConfiabilidade(): double
}

' abstratas
abstract class Pessoa {
    -id: int
    -nome: String
    -email: String
    -senha: String
}

' Classes 
class Usuario extends Pessoa {
    -alertasCriados: List<Alerta>
    +adicionarAlerta(alerta: Alerta)
    +getAlertasCriados(): List<Alerta>
}

class Alerta implements IVotavel {
    -id: int
    -tipo: String
    -descricao: String
    -dataHora: LocalDateTime
    -localizacao: Localizacao
    -criador: Usuario
    -votacoes: List<Votacao>
    +adicionarVotacao(v: Votacao)
    +receberVoto(aindaAcontecendo: boolean)
    +calcularConfiabilidade(): double
}

class Votacao {
    -id: int
    -usuario: Usuario
    -alerta: Alerta
    -aindaAcontecendo: boolean
    -dataHora: LocalDateTime
    +isAindaAcontecendo(): boolean
}

class Localizacao {
    -latitude: double
    -longitude: double
    -endereco: String
}

' Relacionamentos
Usuario "1" -- "0..*" Alerta : cria >
Alerta "1" -- "0..*" Votacao : recebe >
Usuario "1" -- "0..*" Votacao : realiza >
Alerta "1" *-- "1" Localizacao : possui >

@enduml
